<resources>
    <string name="switch_ready_msg">Will provide after trial period.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="please_wait">Downloading now...</string>
    <string name="export">Export Video</string>
    <string name="facebook">Facebook</string>
    <string name="guide_title_1">Help others learn about anything.</string>
    <string name="guide_title_2">Make video lectures with ease!</string>
    <string name="guide_title_3">Share your knowledge with the world!</string>
    <string name="guide_title_1_subtitle_1">Use Know Recorder to share what you know best.</string>
    <string name="guide_title_1_subtitle_2">Produce video classes for use in flipped classrooms or create tutorials to help others.</string>
    <string name="guide_title_2_subtitle_1">Record your class using drawing, text, images, video and voice at the touch of a button.</string>
    <string name="guide_title_3_subtitle_1">Completed videos can be uploaded directly to YouTube</string>
    <string name="guide_title_3_subtitle_2">and posted on Facebook from within the app, making sharing your videos easier than ever!</string>
    <string name="c_import_pdf_endtime">You can import PDF in the end of this recording. Do you want to do it?</string>
    <string name="mute">Mute Audio</string>
    <string name="left_panel_new">New</string>
    <string name="new_note_confirm">Do you want to start a new project?\nYour current project will be saved automatically.</string>
    <string name="note_delete_confirm_msg">Do you want to delete note?</string>
    <string name="unavailable_to_delete_note">At least one note is required here.</string>
    <string name="left_panel_open">Open</string>
    <string name="record_selection_1">Record from this point onwards</string>
    <string name="mins_left">Remaining time : %@ sec.</string>
    <string name="dialog_setting_time_limit">Unlock recording time limit</string>
    <string name="dialog_setting_remove_watermark">Remove watermark</string>
    <string name="dialog_setting_title">Options</string>
    <string name="dialog_setting_accounts">Accounts</string>
    <string name="left_panel_share">Share</string>
    <string name="guide_start_btn">Start</string>
    <string name="subject">Title</string>
    <string name="tooltip_to_timeline">Press the record button when you’re ready to start.\nNot happy with it? Simply go back and record again!</string>
    <string name="exit">Don\'t show again</string>
    <string name="tooltip_to_pen">Use the whiteboard tools to write,\ndraw shapes, and insert text,\nimages, PDFs and video.</string>
    <string name="tooltip_to_opencourse">Share your videos and search\nfor other users’ videos by category.</string>
    <string name="opencourse">Open Courses</string>
    <string name="youtube">YouTube</string>
    <string name="export_default_text">Video made with Know Recorder</string>
    <string name="to_use_know_recorder_please_sign_in">Please sign in to use Know Recorder.</string>
    <string name="login">Sign In</string>
    <string name="record_not_found_export">You need to record something!</string>
    <string name="opencourse_back">Back</string>
    <string name="i_search_result_ok">#COUNT# Results found for #KEYWORD#</string>
    <string name="i_searchtips">Search tips</string>
    <string name="i_searchtips_one">Make sure that your keywords are spelled correctly.</string>
    <string name="i_searchtips_two">Try using fewer, different or more general keywords.</string>
    <string name="share_to_youtube_valid_toast">To share your video, please export your project first.</string>
    <string name="opencourse_download_step1">Downloading video now.</string>
    <string name="i_viewer_no_result_found">No Result found for #KEYWORD#</string>
    <string name="category">Category</string>
    <string name="description">Movie Description</string>
    <string name="please_enter_subject">Please enter the title.</string>
    <string name="youtube_validation_2">100 letters can be entered in title.</string>
    <string name="youtube_validation_1">Brackets aren\'t allowed in title.</string>
    <string name="opencourse_menu_all">All</string>
    <string name="opencourse_menu_art">Art</string>
    <string name="opencourse_menu_language">Language</string>
    <string name="opencourse_menu_math">Math</string>
    <string name="opencourse_menu_others">Others</string>
    <string name="opencourse_menu_science">Science</string>
    <string name="opencourse_menu_social">Social</string>
    <string name="viewer_search_category_most_popular">Most popular</string>
    <string name="viewer_search_category_name">Title</string>
    <string name="viewer_search_category_recent">Recent</string>
    <string name="action_search">Search</string>
    <string name="app_name">Know Recorder</string>
    <string name="youtube_upload">Upload to Youtube</string>
    <string name="initiation_started">Initializing upload</string>
    <string name="initiation_completed">Initialization complete</string>
    <string name="upload_in_progress">Uploading to YouTube.</string>
    <string name="yt_upload_completed">Uploaded to YouTube.</string>
    <string name="upload_completed">Uploaded to YouTube.</string>
    <string name="upload_not_started">Ready to upload to YouTube</string>
    <string name="yt_upload_failed">Failed to upload the video.</string>
    <string name="please_try_again">Please try exporting your video to YouTube again.</string>
    <string name="cant_access_play">Could not connect to Google Play</string>
    <string name="youtube_validation_5">Select a category</string>
    <string name="reset_papers_popup_toast">All changes will be lost. Do you wish to continue?</string>
    <string name="image_drag_message">Imported image successfully! Drag screen to add into canvas.</string>
    <string name="video_touch_message">Imported video successfully! Touch screen to add into canvas.</string>
    <string name="shape_drag_message">Draw shapes by dragging</string>
    <string name="text_touch_message">Touch a place on the board to insert a text box</string>
    <string name="filecopy_loading_file">Importing ...</string>
    <string name="record_selection_warn">Editing Options</string>
    <string name="record_selection_2">New recording from here</string>
    <string name="record_not_found">You need to record something!</string>
    <string name="no_google_play_service">Google Play is not installed</string>
    <string name="youtube_upload_started_toast">Start uploading to Youtube.</string>
    <string name="google_login_succeed">Logged in to YouTube</string>
    <string name="untitled_note_name">Video Made with Know Recorder</string>
    <string name="opencourse_respond_fail">Server Error</string>
    <string name="opencourse_upload_step1">Compressing files..</string>
    <string name="opencourse_upload_step2">Compression complete</string>
    <string name="opencourse_upload_step3">Exporting files…</string>
    <string name="opencourse_upload_error_zip">There was an error during compression. Error Code:</string>
    <string name="opencourse_upload_error_thumbnail">Thumbnail image export failed. Error Code:</string>
    <string name="opencourse_upload_succeed">Export Complete</string>
    <string name="opencourse_upload_error_1">One or more of your files did not export sucessfully. Please recheck your files.</string>
    <string name="opencourse_upload_error_2">Export failed. Error Code:</string>
    <string name="opencourse_upload_error_3">There was a problem while exporting the video to the server.</string>
    <string name="video_encoding_finished">Upload to Gallery Complete</string>
    <string name="googleplay_service_connection_failed">Failed to connect to Google Play</string>
    <string name="play_finished">Play is over.</string>
    <string name="opencourse_play_unavailable">Unable to play</string>
    <string name="onepage_onevideo">You can only add one video per pageid.</string>
    <string name="shape_too_small">Figure is too small to add.</string>
    <string name="image_too_small">Image size is too small to add.</string>
    <string name="pdf_renderer_error">An error has occurred.</string>
    <string name="gallery">Gallery</string>
    <string name="private_setting">Privacy Level</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="now_in_compress">Compressing file…</string>
    <string name="now_encoding_video">Exporting to Gallery</string>
    <string name="now_in_decompress">Uncompressing file…</string>
    <string name="unavailable_to_save_disk">Unable to save compressed files to disk</string>
    <string name="file_download_failed">File download error. Code :</string>
    <string name="content_text_youtube_upload_started">Uploading to YouTube.</string>
    <string name="enter_text_here">Type text here</string>
    <string name="export_to_gallery">Gallery</string>
    <string name="twice_backpress_to_exit">Press the back key again to finish</string>
    <string name="fail_to_get_categories">Failed to load categories</string>
    <string name="no_youtube_history">Export your video to YouTube first to share via Facebook.</string>
    <string name="i_youtube_category">Category</string>
    <string name="i_category_film">Film &amp; Animation</string>
    <string name="i_category_autos">Autos &amp; Vehicles</string>
    <string name="i_category_music">Music</string>
    <string name="i_category_pets">Pets &amp; Animals</string>
    <string name="i_category_sports">Sports</string>
    <string name="i_category_travel">Travel &amp; Events</string>
    <string name="i_category_game">Gaming</string>
    <string name="i_category_people">People &amp; Blogs</string>
    <string name="i_category_comedy">Comedy</string>
    <string name="i_category_ent">Entertainment</string>
    <string name="i_category_news">News &amp; Politics</string>
    <string name="i_category_howto">Howto &amp; Style</string>
    <string name="i_category_edu">Education</string>
    <string name="i_category_science">Science&amp; Technology</string>
    <string name="i_category_nonprofits">Nonprofits &amp; Activism</string>
    <string name="s_general">General</string>
    <string name="s_horizon">Always play videos in horizontal mode</string>
    <string name="s_wifi">Only play videos when connected to Wi-Fi</string>
    <string name="s_qna">Help</string>
    <string name="s_qna_q1">How can I make my own video lectures?</string>
    <string name="s_qna_a1">Try Know Recorder for Android Tablet! Use the simple interface to record your voice, write on the whiteboard, and insert images/PDFs to make your own video lectures.</string>
    <string name="s_qna_q2">Can I stream classes live?</string>
    <string name="s_qna_a2">Check out our online classroom service Knowlounge. Knowlounge is a real-time interactive learning platform that also supports communication via webcam. Hold a live class via your browser or app and interact with students as you would in a real classroom. Make learning online more enjoyable by taking part in group study, chatting with others, giving quizzes and much more!</string>
    <string name="s_shortcut">Shortcut</string>
    <string name="s_question">Contact Us</string>
    <string name="s_info">Information</string>
    <string name="s_terms">Service User Agreement</string>
    <string name="s_privacy">Privacy Policy</string>
    <string name="s_version">Version</string>
    <string name="i_recording_option_all">Drawing &amp; Voice</string>
    <string name="i_recording_option_voice">Edit voice only</string>
    <string name="c_recording_new">Record from this point onwards</string>
    <string name="c_recording_this_page">Record for this pageid only</string>
    <string name="i_recording_option_title">Editing Options</string>
    <string name="i_recording_guide_label">Record selected area again.</string>
</resources>