<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#505050"
            android:text="@string/dialog_setting_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--일반 begin-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_p_op_setting_subtitle"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:textSize="17dp"
                android:textColor="#646464"
                android:text="@string/s_general"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_horizon"/>
                <Switch
                    android:id="@+id/play_landscape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_p_op_setting_bodytitle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_wifi"/>
                <Switch
                    android:id="@+id/play_only_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="로그아웃"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_nextarrow"/>
            </LinearLayout>
            <!--일반 end-->

            <!--안내 begin-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_p_op_setting_subtitle"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:textSize="17dp"
                android:textColor="#646464"
                android:text="@string/s_qna"
                android:id="@+id/textView2" />

            <LinearLayout
                android:id="@+id/how_video_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_qna_q1"/>
                <ImageView
                    android:id="@+id/how_video_more_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_fold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/how_video_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="16dp"
                android:textSize="13dp"
                android:visibility="gone"
                android:text="@string/s_qna_a1"/>
            <LinearLayout
                android:id="@+id/how_realtime_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_p_op_setting_bodytitle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_qna_q2"/>
                <ImageView
                    android:id="@+id/how_realtime_more_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_fold"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/how_realtime_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="13dp"
                    android:text="@string/s_qna_a2"/>
                <TextView
                    android:id="@+id/connect_knowlounge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="20dp"
                    android:textSize="13dp"
                    android:textColor="#96c81e"
                    android:text="@string/s_shortcut"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/inquire_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_p_op_setting_bodytitle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_question"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_nextarrow"/>
            </LinearLayout>
            <!--안내 end-->

            <!--정보 begin-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_p_op_setting_subtitle"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:textSize="17dp"
                android:textColor="#646464"
                android:text="@string/s_info"/>
            <LinearLayout
                android:id="@+id/terms_of_use"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_terms"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_nextarrow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_p_op_setting_bodytitle"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_privacy"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_setting_nextarrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_p_op_setting_bodytitle"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:gravity="center_vertical"
                    android:text="@string/s_version"/>
                <TextView
                    android:id="@+id/version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#96c81e"
                    android:paddingRight="10dp"
                    android:text="1.0.0.1"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc"/>
            <!--정보 end-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>